		* syscall_check is no longer a macro
		* Fixed a serious bug introduced by ENABLE_UPNP Makefile.am switch
		* Fix for libpng version detection on acinclude.m4
		* Fix for server list and node list
		* Made some common dialog modals and giving them a default style
		* Handle different UPnP library versions
		* UPnP for amuleweb.
		* Fix for crash on exit and a little less redundancy.
		* Trying to make listctrls behave on Mac

	Radek:
		* Patch to fix windows compilation.

	Raziel:
		* Adapt Kad code to the standard coding guidelines.
		* Work on EC API

	spiralvoice:
		* Patch to enable MLDonkey os_info support.

	Skolnick:
		* Added the time to the aMule stats in the wxCas window and
		  in the generated image.
		* Added the time to the aMule stats in the cas output and
		  in the generated image
		* Added option to generate image in JPG format (along with PNG)
		* Added new icon for aMule

	Trevino:
		* Fix for "Both the Unknown client icon and the Unknown status
		icon points to the same file" issue.
		* Skin support with relative paths.

	Vollstrecker:
		* Added possibility to give the path for output right with
		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.
		* Fixed typos in the man pages.
		* Added manpage for amulegui.
		* Added amulegui desktop icon (with Gerd78).
		* Manpages update.
		* Add debian folder

	wuischke:
		* Add emulecollection support on aMule ED2K Links Handler
		* Fix online signature update rate
		* Fix display of filesize > 4GB in file detail dialog
		* Fix toolbar import/about icon order
		* Add option to load emulecollection in SharedFilesCtrl
		* Add oga and ogv extension for file type search
		* Allow skin/webserver template section via wxchoice + skin enhancement
		* Some error messages rephrased, to improve readability